replace aysnc client with sync, add native image conf